<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:paddingBottom="2dp"
    android:paddingTop="2dp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_weight="2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="start"
        android:id="@+id/sno"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:padding="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:text="S.No."/>

    <TextView
        android:id="@+id/data_name"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:gravity="start"
        android:padding="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:text="@string/Name" />

    <TextView
        android:layout_weight="4"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="end"
        android:id="@+id/data_dr"
        android:padding="5dp"
        android:textStyle="bold"
        android:text="@string/Debit"/>

    <TextView
        android:layout_weight="4"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="end"
        android:id="@+id/data_cr"
        android:padding="5dp"
        android:textStyle="bold"
        android:text="@string/Credit"/>

    <TextView
        android:layout_weight="4"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="end"
        android:id="@+id/data_bal"
        android:padding="5dp"
        android:textStyle="bold"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/Balance"/>

</LinearLayout>