<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.root.EAS.MainActivity"
    android:layout_gravity="center_vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Accounts"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:id="@+id/button_accounts"
        android:onClick="openAccounts"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:layout_margin="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Stock"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:id="@+id/button_stock"
        android:onClick="openStock"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:layout_margin="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Balance_Sheet"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:id="@+id/button_bs"
        android:onClick="openBS"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:layout_margin="10dp"/>

</LinearLayout>
